EL-316: Reconcile classloader terminology in JavaDoc and API
Updated JavaDoc across ElementLoaderFactory and ElementPathLoader to clearly
distinguish between base classloader (for selective type borrowing) and parent
classloader (for delegation hierarchy). Added comprehensive documentation about
the three-component classloader structure for isolated Elements.

Key changes:
- Clarified base vs parent classloader terminology throughout JavaDoc
- Updated method signatures to explicitly pass both parent and base classloaders
- Added deprecation warnings for Element parent functionality
- Enhanced ElementPathLoader to support collection of paths with shared API classloader
- Added classloader naming to ApiClassLoader for better debugging
- Improved error handling and cleanup in load methods

Tests currently fail but committing WIP to preserve terminology reconciliation work.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>